force-app/main/default/objects/Oferta_Competidora__c/Oferta_Competidora__c.object-meta.xml
<CustomObject>
    <label>Oferta Competidora</label>
    <nameField>
        <displayFormat>OG-{0000}</displayFormat>
        <label>Oferta Competidora Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oferta Competidora</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>