force-app/main/default/objects/Oferta_Competidora__c/fields/Comentarios_Adicionales__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Adicionales__c</fullName>
    <label>Comentarios Adicionales</label>
    <type>TextArea</type>
</CustomField>