force-app/main/default/objects/Oferta_Competidora__c/fields/Competidor__c.field-meta.xml
<CustomField>
    <fullName>Competidor__c</fullName>
    <label>Competidor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competidores</valueSetName>
    </valueSet>
</CustomField>