force-app/main/default/objects/Oferta_Competidora__c/fields/Cuenta_ganadora__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_ganadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta ganadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oferta Competidora</relationshipLabel>
    <relationshipName>Oferta_Competidora</relationshipName>
    <type>Lookup</type>
</CustomField>