force-app/main/default/objects/Oferta_Competidora__c/fields/Ganador__c.field-meta.xml
<CustomField>
    <fullName>Ganador__c</fullName>
    <label>Ganador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competidores</valueSetName>
    </valueSet>
</CustomField>