force-app/main/default/objects/Oferta_Competidora__c/fields/Importe_Ganador__c.field-meta.xml
<CustomField>
    <fullName>Importe_Ganador__c</fullName>
    <label>Importe Ganador</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>