force-app/main/default/objects/Oferta_Competidora__c/fields/Importe_Perdedor__c.field-meta.xml
<CustomField>
    <fullName>Importe_Perdedor__c</fullName>
    <formula>Opportunity_Perdida__r.Importe_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Perdedor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>