force-app/main/default/objects/Oferta_Competidora__c/fields/Motivo_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perdida__c</fullName>
    <label>Motivo Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acreditaciones/Referencias</fullName>
            </value>
            <value>
                <fullName>Económico</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>No cumplimos requisitos</fullName>
                <isActive>false</isActive>
                <label>No cumplimos requisitos</label>
            </value>
            <value>
                <fullName>No les gusta el nuevo logo</fullName>
                <isActive>false</isActive>
                <label>No les gusta el nuevo logo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>