force-app/main/default/objects/Oferta_Competidora__c/fields/Opportunity_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Perdida__c</fullName>
    <label>Opportunity Perdida</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oferta Competidora</relationshipLabel>
    <relationshipName>Oferta_Competidora</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>